<resources>
    <string name="app_name">Personajes Rick and Morty</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name_title">Nombre</string>
    <string name="specie_label">Especie:</string>
    <string name="gender_title"></string>
    <string name="gender_label">Genero:</string>
    <string name="Location_title">localizacion</string>
    <string name="location_label">nn</string>
    <string name="specie_title" />
    <string name="pageAdd">Añadir pagina</string>
    <string name="imagenfavorite">ImagenFavorite</string>
    <string name="title_favorite">Favorite</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_details">Details</string>
</resources>