<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lopezing.webserviceram.ui.persoanajes.PersonFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>


    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.lopezing.webserviceram.ui.details.DetailsFragment"
        android:label="@string/title_details" >
        <argument
            android:name="person"
            app:argType="com.lopezing.webserviceram.server.model.Person" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.lopezing.webserviceram.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_navigation_favorite_to_detailsFavFragment"
            app:destination="@id/detailsFavFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFavFragment"
        android:name="com.lopezing.webserviceram.ui.favorite.details.DetailsFavFragment"
        android:label="DetailsFavFragment" >
        <argument
            android:name="localperson"
            app:argType="com.lopezing.webserviceram.local.LocalPerson" />
    </fragment>


</navigation>